# fast-slic

./: .gitignore  pyproject.toml  setup.py
fast_slic/_cython/: cfast_slic.pxd  csimple_crf.pyx
